tests/pass/no-unimported-text-combined-default.tsx
import Text, { Label } from "@/components/ui/text";

const view = <Text />;
