tests/fail/no-unimported-text-combined-type.tsx
import Label, { type Text } from "@/components/ui/text";

const view = <Text />;
